@@ -5,52 +5,54 @@ plugins {
 }
 
 group = "org.jumpa"
-version = "1.0-SNAPSHOT"
+version = "1.0.1"
 
 application {
     mainClass.set("org.jumpa.Main")
-
-    applicationDefaultJvmArgs = listOf(
-        "-Xms512M",
-        "-Xmx24000M",
-        "-XX:+UseConcMarkSweepGC",
-        "-XX:+UseParNewGC",
-        "-XX:+CMSIncrementalPacing",
-        "-XX:+AggressiveOpts",
-        "-Djava.net.preferIPv4Stack=true"
-    )
 }
 
 repositories {
     mavenCentral()
+    maven {
+        url = uri("https://jogamp.org/deployment/maven/")
+    }
 }
 
 java {
-//    sourceCompatibility = JavaVersion.VERSION_21
-//    targetCompatibility = JavaVersion.VERSION_21
-
     sourceCompatibility = JavaVersion.VERSION_17
     targetCompatibility = JavaVersion.VERSION_17
 }
 
 dependencies {
-    testImplementation(platform("org.junit:junit-bom:5.10.0"))
-    testImplementation("org.junit.jupiter:junit-jupiter")
-
     implementation("org.bytedeco:javacv-platform:1.5.6")
 
+    // HYPE - Replace "latest.release" with specific version if necessary
     implementation(files("libs/HYPE.jar"))
 
+    // Processing libraries
     implementation(files("libs/processing-4.3_library/core.jar"))
-    implementation(files("libs/processing-4.3_library/gluegen-rt.jar"))
-    implementation(files("libs/processing-4.3_library/jogl-all.jar"))
+    implementation("org.jogamp.gluegen:gluegen-rt:2.4.0")
+    implementation("org.jogamp.gluegen:gluegen-rt:2.4.0:natives-macosx-universal")
+    implementation("org.jogamp.gluegen:gluegen-rt:2.4.0:natives-linux-amd64")
+    implementation("org.jogamp.gluegen:gluegen-rt:2.4.0:natives-windows-amd64")
 
-    implementation(files("libs/minim/minim.jar"))
-    implementation(files("libs/minim/jsminim.jar"))
-    implementation(files("libs/minim/mp3spi1.9.5.jar"))
-    implementation(files("libs/minim/jl1.0.1.jar"))
-    implementation(files("libs/minim/tritonus_aos.jar"))
-    implementation(files("libs/minim/tritonus_share.jar"))
+
+    implementation("org.jogamp.jogl:jogl-all:2.4.0")
+    implementation("org.jogamp.jogl:jogl-all:2.4.0:natives-macosx-universal")
+    implementation("org.jogamp.jogl:jogl-all:2.4.0:natives-linux-amd64")
+    implementation("org.jogamp.jogl:jogl-all:2.4.0:natives-windows-amd64")
+    implementation("org.jogamp.jogl:nativewindow:2.4.0")
+    implementation("org.jogamp.jogl:nativewindow:2.4.0:natives-macosx-universal")
+    implementation("org.jogamp.jogl:nativewindow:2.4.0:natives-linux-amd64")
+    implementation("org.jogamp.jogl:nativewindow:2.4.0:natives-windows-amd64")
+    implementation("org.jogamp.jogl:newt:2.4.0")
+    implementation("org.jogamp.jogl:newt:2.4.0:natives-macosx-universal")
+    implementation("org.jogamp.jogl:newt:2.4.0:natives-linux-amd64")
+    implementation("org.jogamp.jogl:newt:2.4.0:natives-windows-amd64")
+
+
+    implementation("net.compartmental.code:minim:2.2.2")
+    implementation("org.bytedeco:ffmpeg-platform:5.1.2-1.5.8")
 }
 
 tasks.test {
